Bug 490507 - System Settings fails to fully quit after changing the time zone
Summary: System Settings fails to fully quit after changing the time zone
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_clock (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR major
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-07-19 15:49 UTC by Nate Graham
Modified: 2024-07-26 22:32 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.1.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2024-07-19 15:49:50 UTC
Everything KDE built from source on top of Qt 6.7.2 in Fedora KDE 40.


STEPS TO REPRODUCE
1. Run `systemsettings` in a terminal window
2. Navigate to the Date & Time KCM
3. Click the "Time Zone" tab
4. Change the time zone to anything else, provide authentication, and verify that the system time zone got changed
5. Hit Ctrl+Q to quit system settings


OBSERVED RESULT
The `systemsettings` process continues running with no window. This causes the window to not appear when the app is "launched" later, so the whole app looks broken.


EXPECTED RESULT
The `systemsettings` process exits cleanly.


ADDITIONAL INFORMATION
There's a stream of spam in the console output; not sure if it's related:

QFont::setPixelSize: Pixel size <= 0 (-1)
QFont::setPixelSize: Pixel size <= 0 (0)
QFont::setPixelSize: Pixel size <= 0 (-1)
QFont::setPixelSize: Pixel size <= 0 (0)
QFont::setPixelSize: Pixel size <= 0 (-1)
QFont::setPixelSize: Pixel size <= 0 (0)
QFont::setPixelSize: Pixel size <= 0 (-1)
QFont::setPixelSize: Pixel size <= 0 (0)
QFont::setPixelSize: Pixel size <= 0 (-1)
QFont::setPixelSize: Pixel size <= 0 (0)
QFont::setPixelSize: Pixel size <= 0 (-1)
Comment 1 Bug Janitor Service 2024-07-26 14:05:48 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/systemsettings/-/merge_requests/324
Comment 2 Nicolas Fella 2024-07-26 22:31:00 UTC
Git commit 5d292c88e162b5e12eec1589a1fab6c53b76e61c by Nicolas Fella.
Committed on 26/07/2024 at 14:05.
Pushed by ngraham into branch 'master'.

Actually start the KAuth::ExecuteJob

By not starting it it will not only not do its job, it will also block quitting the app because of KJob's event loop locker

M  +1    -0    app/ModuleView.cpp

https://invent.kde.org/plasma/systemsettings/-/commit/5d292c88e162b5e12eec1589a1fab6c53b76e61c
Comment 3 Nate Graham 2024-07-26 22:32:37 UTC
Git commit cb930d8f16dc969b7f57eaabf4a51c33cc740ac7 by Nate Graham.
Committed on 26/07/2024 at 22:31.
Pushed by ngraham into branch 'Plasma/6.1'.

Actually start the KAuth::ExecuteJob

By not starting it it will not only not do its job, it will also block quitting the app because of KJob's event loop locker


(cherry picked from commit 5d292c88e162b5e12eec1589a1fab6c53b76e61c)

Co-authored-by: Nicolas Fella <nicolas.fella@gmx.de>

M  +1    -0    app/ModuleView.cpp

https://invent.kde.org/plasma/systemsettings/-/commit/cb930d8f16dc969b7f57eaabf4a51c33cc740ac7