Actually start the KAuth::ExecuteJob

By not starting it it will not only not do its job, it will also block quitting the app because of KJob's event loop locker

BUG: 490507


(cherry picked from commit 5d292c88e162b5e12eec1589a1fab6c53b76e61c)

Co-authored-by: Nicolas Fella <nicolas.fella@gmx.de>